--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
             <!-- Start Here Section -->
             <div class="mb-5">
                 <h2 class="text-center text-white mb-4">🚀 Start Your Journey</h2>
-                <div class="row justify-content-center">
-                    <div class="col-md-4">
+                <div class="row">
+                    <div class="col-md-3">
                         <div class="section-card text-center">
                             <div class="section-icon">📚</div>
                             <h3>Data Jargon 101</h3>
@@ -43,7 +43,15 @@
                             <a href="jargon.html" class="btn btn-primary">Start Here</a>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-3">
+                        <div class="section-card text-center">
+                            <div class="section-icon">📖</div>
+                            <h3>Business Glossary</h3>
+                            <p>Complete reference guide for business users</p>
+                            <a href="glossary.html" class="btn btn-primary">Reference</a>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
                         <div class="section-card text-center">
                             <div class="section-icon">⚖️</div>
                             <h3>Architecture Comparison</h3>
@@ -51,7 +59,7 @@
                             <a href="comparison.html" class="btn btn-primary">Compare All</a>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-3">
                         <div class="section-card text-center">
                             <div class="section-icon">🎯</div>
                             <h3>Solution Guide</h3>
